--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,8 @@ menu:
 #     url:               /cookies-policy/
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © 2019.groundhogB All rights reserved.
+copyright:             © 2019.
+                         groundhogB   All rights reserved.
 
 # Format of the permalinks
 permalink:             /:categories/:year-:month-:day-:title/
