--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -18,8 +18,8 @@ author1:
     -- or --
     [Buy PRO][buy]
 
-    [kit]: https://github.com/qwtel/hydejack-starter-kit/archive/v8.1.1.zip
-    [buy]: https://app.simplegoods.co/i/NATYVLYT
+    [kit]: 
+    [buy]: 
 
   # This photo will be used in the about section
   picture:
