--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -35,6 +35,7 @@ author1:
   social:
     twitter:         <username>
     github:          <username>
+    email:           <culabicsrxhy0@gmail.com>
     # email:           <mail@domain.tld>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
